--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">About Me</h2>
                 <div class="max-w-3xl mx-auto">
                     <div class="bg-surface p-8 rounded-lg shadow-md mb-8">
-                        <p id="about-bio" class="text-gray-700 mb-6 leading-relaxed">I am Yogesh Kumar, a tech-driven learner passionate about solving complex problems with Python and building clean, scalable web applications using Django, Flask, FastAPI. Currently working in Deloitte USI as a Consultant</p>
+                        <p id="about-bio" class="text-gray-700 mb-6 leading-relaxed">I am Yogesh Kumar, a Python Developer with extensive knowledge and experience in developing Python applications, backend services, and frameworks. has experience in cloud native application development using Django, Flask, and  Fast API, which incorporates various AWS services (S3, EC2).  Worked on Python Django and Django REST framework to build an infrastructure monitoring application. Committed to delivering high-quality, scalable solutions for large-scale applications and continuously exploring emerging technologies. ​
+
+​</p>
                     </div>
 
                     <div class="bg-surface p-8 rounded-lg shadow-md mb-8">
