--- a/index.html
+++ b/index.html
@@ -107,23 +107,23 @@
                     </div>
 
                     <div class="bg-surface p-8 rounded-lg shadow-md mb-8">
-                        <h4 class="text-xl font-bold text-accent mb-4">Core Areas I’m Focused On</h4>
+                        <h4 class="text-xl font-bold text-accent mb-4">Core Areas</h4>
                         <ul class="list-disc list-inside space-y-2 text-gray-700">
                             <li><span class="font-bold">📘 DSA with Python</span> – Practicing consistently to build strong problem-solving skills</li>
                             <li><span class="font-bold">⚙ Backend Development</span> – Python, Djano, Flask, FastAPI</li>
                             <li><span class="font-bold">🌍 Database</span> – Postgres, Mongodb</li>
-                            <li><span class="font-bold">🛠 Version Control & Productivity</span> – Git, GitHub, gitlab, )</li>
+                            <li><span class="font-bold">🛠 AWS Services</span> – S3, EC2, lambda, cloudwatch, RDS )</li>
                         </ul>
                     </div>
 
                     <div class="bg-surface p-8 rounded-lg shadow-md mb-8">
-                        <h4 class="text-xl font-bold text-accent mb-4">Core CS Subjects I’m Exploring</h4>
+                        <h4 class="text-xl font-bold text-accent mb-4">Core CS Subjects I’have  Experties</h4>
                         <ul class="list-disc list-inside space-y-2 text-gray-700">
                             <li><span class="font-bold">🧩 Object-Oriented Programming in Python</span></li>
                             <li><span class="font-bold">🗄 Database Management Systems</span></li>
                             <li><span class="font-bold">💻 Operating Systems</span></li>
                             <li><span class="font-bold">🌐 Computer Networks</span></li>
-                            <li><span class="font-bold">🏗 System Design</span> – Understanding how systems are designed from the ground up</li>
+                            <li><span class="font-bold">🏗 System Design</span></li>
                         </ul>
                     </div>
 
@@ -133,34 +133,34 @@
                             <div class="absolute -left-[9px] top-1 w-4 h-4 bg-accent rounded-full border-4 border-white"></div>
                             <p class="font-bold"> Deloitte USI</p>
                             <p class="text-gray-600">April 2025 – Present</p>
-                            <p class="text-gray-600">Built APIs to interface with external clustering services, enabling data enrichment workflows. Processed the received data with large language models (LLMs) and persisted results to the database.</p>
-                            <p class="text-gray-600">Designed robust database schemas and created Pydantic models to ensure strict data validation and integrity throughout the application.</p>
-                            <p class="text-gray-600">Integrated AWS services, notably S3, to automate the retrieval and storage of CSV files, supporting scalable data ingestion workflows.</p>
+                            <p class="text-gray-600">• Built APIs to interface with external clustering services, enabling data enrichment workflows. Processed the received data with large language models (LLMs) and persisted results to the database.</p>
+                            <p class="text-gray-600">• Designed robust database schemas and created Pydantic models to ensure strict data validation and integrity throughout the application.</p>
+                            <p class="text-gray-600">• Integrated AWS services, notably S3, to automate the retrieval and storage of CSV files, supporting scalable data ingestion workflows.</p>
                         </li>
                         <li class="ml-4 pl-4 relative">
                             <div class="absolute -left-[9px] top-1 w-4 h-4 bg-accent rounded-full border-4 border-white"></div>
                             <p class="font-bold"> Antino Labs</p>
                             <p class="text-gray-600">June 2024 – April 2025</p>
-                            <p class="text-gray-600"> Developed RESTful APIs using Django REST Framework to enable seamless communication between front-end and back-end systems</p>
-                            <p class="text-gray-600"> Work on the Django-Admin Panel to register a new model as per the requirements and customize the Admin Panel</p>
-                            <p class="text-gray-600"> Used AWS services like S3 to storing the images and EC2 to Deploy the application.</p>
-                            <p class="text-gray-600"> Conducted API testing with Postman.</p>
+                            <p class="text-gray-600">• Developed RESTful APIs using Django REST Framework to enable seamless communication between front-end and back-end systems</p>
+                            <p class="text-gray-600">• Work on the Django-Admin Panel to register a new model as per the requirements and customize the Admin Panel</p>
+                            <p class="text-gray-600">• Used AWS services like S3 to storing the images and EC2 to Deploy the application.</p>
+                            <p class="text-gray-600">• Conducted API testing with Postman.</p>
                         </li>
                         <li class="ml-4 pl-4 relative">
                             <div class="absolute -left-[9px] top-1 w-4 h-4 bg-accent rounded-full border-4 border-white"></div>
                             <p class="font-bold"> Edge </p>
                             <p class="text-gray-600">Nov 2023 – June 2024</p>
-                            <p class="text-gray-600">Managed code deployment to QA, UAT, and PROD environments on servers using Docker and Jenkins.</p>
-                            <p class="text-gray-600">Implemented a comprehensive event logging and transaction reporting system using RabbitMQ, Postgres for real-time user activity tracking and data analysis, aiding the Project Manager in decision-making.</p>
-                            <p class="text-gray-600">Write ElasticSearch queries to retrieve, modify, and manipulate data, optimizing search performance and enhancing data analysis capabilities.</p>
-                            <p class="text-gray-600">Utilized GitLab as a version control system for submitting merge requests (MRs), facilitating collaborative code review and integration processes.</p>
+                            <p class="text-gray-600">• Managed code deployment to QA, UAT, and PROD environments on servers using Docker and Jenkins.</p>
+                            <p class="text-gray-600">• Implemented a comprehensive event logging and transaction reporting system using RabbitMQ, Postgres for real-time user activity tracking and data analysis, aiding the Project Manager in decision-making.</p>
+                            <p class="text-gray-600">• Write ElasticSearch queries to retrieve, modify, and manipulate data, optimizing search performance and enhancing data analysis capabilities.</p>
+                            <p class="text-gray-600">• Utilized GitLab as a version control system for submitting merge requests (MRs), facilitating collaborative code review and integration processes.</p>
                         </li>
                         <li class="ml-4 pl-4 relative">
                             <div class="absolute -left-[9px] top-1 w-4 h-4 bg-accent rounded-full border-4 border-white"></div>
                             <p class="font-bold"> Globallogic </p>
                             <p class="text-gray-600">Jan 2022 – Nov 2023</p>
-                            <p class="text-gray-600">Designed and implemented views, models, and APIs using the Django framework for an analytics dashboard web application.</p>
-                            <p class="text-gray-600">Developed RESTful APIs using Django REST Framework to enable seamless communication between front-end and back-end systems.</p>
+                            <p class="text-gray-600">• Designed and implemented views, models, and APIs using the Django framework for an analytics dashboard web application.</p>
+                            <p class="text-gray-600">• Developed RESTful APIs using Django REST Framework to enable seamless communication between front-end and back-end systems.</p>
                         </li>
                     </ul>
 
@@ -197,7 +197,7 @@
                         <div class="cert-image-wrapper">
                             <img src="Assets/images/1.jpg" alt="Certificate Preview">
                             <div class="cert-overlay">
-                                <a href="#" class="view-cert-link" target="_blank" rel="noopener noreferrer">
+                                <a href="https://www.hackerrank.com/certificates/887bca6995a7" class="view-cert-link" target="_blank" rel="noopener noreferrer">
                                     <i class="fas fa-eye"></i> View Certificate
                                 </a>
                             </div>
@@ -213,7 +213,7 @@
                         <div class="cert-image-wrapper">
                             <img src="Assets/images/2.jpg" alt="Certificate Preview">
                             <div class="cert-overlay">
-                                <a href="#" class="view-cert-link" target="_blank" rel="noopener noreferrer">
+                                <a href="https://www.hackerrank.com/certificates/c06cc598386b" class="view-cert-link" target="_blank" rel="noopener noreferrer">
                                     <i class="fas fa-eye"></i> View Certificate
                                 </a>
                             </div>
