--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </h1>
 
             <p class="text-lg md:text-xl text-stone-600 font-medium mt-6 mb-10 animate-fade-in-up" style="animation-delay: 0.3s;">
-                Backend Developer
+                Backend Developer |Python Developer
             </p>
 
             <div class="flex justify-center md:justify-start gap-4 animate-fade-in-up" style="animation-delay: 0.5s;">
@@ -116,7 +116,7 @@
                         <h4 class="text-xl font-bold text-accent mb-4">Core Areas</h4>
                         <ul class="list-disc list-inside space-y-2 text-gray-700">
                             <li><span class="font-bold">📘 DSA with Python</span> – Practicing consistently to build strong problem-solving skills</li>
-                            <li><span class="font-bold">⚙ Backend Development</span> – Python, Djano, Flask, FastAPI</li>
+                            <li><span class="font-bold">⚙ Backend Development</span> – Python, Django, Flask, FastAPI</li>
                             <li><span class="font-bold">🌍 Database</span> – Postgres, Mongodb</li>
                             <li><span class="font-bold">🛠 AWS Services</span> – S3, EC2, lambda, cloudwatch, RDS )</li>
                         </ul>
